--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -149,3 +149,7 @@ public net.minecraft.client.gui.Font$StringRenderOutput
 public net.minecraft.client.gui.Font adjustColor(I)I
 
 public net.minecraft.client.gui.Font SHADOW_OFFSET
+
+public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder <init>()V
+
+public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBuilder <init>()V # CompositeStateBuilder
