--- a/gradle.properties
+++ b/gradle.properties
@@ -14,12 +14,21 @@ parchment_mappings_version=2024.07.28
 
 mod_name=Malum
 mod_id=malum
-mod_version=1.6.2
+mod_version=1.7.0
 mod_license=All Rights Reserved
 mod_group_id=com.sammy.malum
 mod_authors=Sammy Semicolon
 mod_description=A dark magic mod focused on soul and spirit magic.
+
+# Mandatory
 lodestone_version=1.7.0.90
-jei_version=19.18.3.204
 curios_version=9.0.12+1.21
+
+# Iron's Spellbooks
+gecko_lib_version=4.5.8
+player_animator_version=2.0.0-alpha1+1.21
+irons_spells_version=1.20.1-3.4.0.2
+
+# Misc
+jei_version=19.18.3.204
 fusion_version=1.1.1
