--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -157,3 +157,7 @@ public net.minecraft.client.renderer.RenderType$CompositeState$CompositeStateBui
 public net.minecraft.world.entity.animal.allay.Allay duplicationCooldown # duplicationCooldown
 
 public net.minecraft.core.HolderSet$Named contents # contents
+
+public net.minecraft.world.entity.LivingEntity getJumpPower()F # getJumpPower
+
+public net.minecraft.world.entity.animal.Rabbit getJumpPower()F # getJumpPower
