--- a/src/main/templates/META-INF/neoforge.mods.toml
+++ b/src/main/templates/META-INF/neoforge.mods.toml
@@ -3,38 +3,41 @@ loaderVersion="${loader_version_range}"
 license="${mod_license}"
 
 [[mods]]
-modId="malum"
+modId="${mod_id}"
 version="${mod_version}"
 displayName="${mod_name}"
 authors="${mod_authors}"
 description='''${mod_description}'''
 
-[[dependencies.malum]]
+[[mixins]]
+config="${mod_id}.mixins.json"
+
+[[dependencies.${mod_id}]]
 modId="neoforge"
 type="required"
 versionRange="${neo_version_range}"
 ordering="NONE"
 side="BOTH"
-[[dependencies.malum]]
+[[dependencies.${mod_id}]]
 modId="minecraft"
 type="required"
 versionRange="${minecraft_version_range}"
 ordering="NONE"
 side="BOTH"
-[[dependencies.malum]]
+[[dependencies.${mod_id}]]
 modId = "lodestone"
 type="required"
 versionRange = "[1.7.0,)"
 ordering = "NONE"
 side = "BOTH"
-[[dependencies.malum]]
+[[dependencies.${mod_id}]]
 modId = "curios"
 type="required"
 versionRange = "[9,)"
 ordering = "NONE"
 side = "BOTH"
 
-[[dependencies.malum]]
+[[dependencies.${mod_id}]]
 modId="fusion"
 type="optional"
 versionRange="[1.0.0,)"
