--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -161,3 +161,5 @@ public net.minecraft.core.HolderSet$Named contents # contents
 public net.minecraft.world.entity.LivingEntity getJumpPower()F # getJumpPower
 
 public net.minecraft.world.entity.animal.Rabbit getJumpPower()F # getJumpPower
+
+public net.minecraft.client.gui.GuiGraphics bufferSource # bufferSource
