--- a/gradle.properties
+++ b/gradle.properties
@@ -30,3 +30,7 @@ ironsSpellsVersion=1.20.1-3.4.0.2
 # Misc
 jeiVersion=15.2.0.22
 fusionVersion=1.1.1
+
+# Tconstruct
+tconstructVersion=74072:6041763
+mantleVersion=74924:6041712
