--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -141,3 +141,7 @@ public net.minecraft.world.entity.LivingEntity getJumpPower()F # getJumpPower
 public net.minecraft.world.entity.animal.Rabbit getJumpPower()F # getJumpPower
 
 public net.minecraft.client.gui.GuiGraphics bufferSource # bufferSource
+
+public net.minecraft.world.entity.LivingEntity attackStrengthTicker # attackStrengthTicker
+
+public net.minecraft.world.entity.LivingEntity dead # dead
