--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -145,3 +145,5 @@ public net.minecraft.client.gui.GuiGraphics bufferSource # bufferSource
 public net.minecraft.world.entity.LivingEntity attackStrengthTicker # attackStrengthTicker
 
 public net.minecraft.world.entity.LivingEntity dead # dead
+
+public net.minecraft.world.level.Explosion damageCalculator # damageCalculator
